Fix moveable layer under 0 layer elements on Shift+select relates to xibosignageltd/xibo-private#515
 - Clear moveable rogue elements

--- a/ui/src/style/layout-editor.scss
+++ b/ui/src/style/layout-editor.scss
@@ -1955,8 +1955,16 @@ div#bg_media_name {
     z-index: $viewer-moveable-z-index !important;
 }
 
-body[multi-select-active] .moveable-control-box {
+body[multi-select-active] {
+    .moveable-control-box {
     z-index: 0 !important;
+    }
+
+    .layout-live-preview {
+        & > .designer-region-canvas, & > #regions > * {
+            z-index: 1 !important;
+        }
+    }
 }
 
 body[layout-editor-fs] .moveable-control-box {
